# section_icon

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
section_icon/: api.py  boot.py  hooks.py  modules.txt
section_icon/public/css/: section_icon.css
section_icon/public/js/: section_icon.js
section_icon/section_icon/doctype/section_icon/: section_icon.js  section_icon.json  section_icon.py  test_section_icon.py
tests/: test_section_icon_validation.py
