[project]
name = "section_icon"
authors = [
    { name = "Raisul Islam", email = "raisul@example.com"}
]
description = "Adds SVG icons to Section Break fields in Frappe forms."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
